--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -246,7 +246,7 @@ legend {
 fieldset {
   padding: 0;
   border-width: 0; }
-input[type="checkbox"],
+/* input[type="checkbox"], */
 input[type="radio"] {
   display: inline; }
 label > .label-body {
