--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -4,6 +4,12 @@
 
 */
 
+@import url("https://fonts.googleapis.com/css?family=Raleway");
+
+* {
+  box-sizing: border-box;
+}
+
 /* Grid
 ----------------------------------------------------------------*/
 
@@ -14,6 +20,15 @@
     margin: 0 auto;
     padding: 0 20px;
     box-sizing: border-box;
+}
+
+.wrapper {
+  position: relative;
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .column,
@@ -95,7 +110,7 @@ html {
     font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
     line-height: 1.6;
     font-weight: 400;
-    font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Press Start 2P", "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
     color: #222; }
   
   
