--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,10 @@
 
 */
 
+body {
+    background-color: #EDEFF1;
+}
+
 /* Header
 ----------------------------------------------------------------*/
 
@@ -13,7 +17,8 @@ header h1 {
 }
 
 header {
-    background-color: bisque;
+    background-color: #283593;
+    color: white;
 }
 
 /* Bookmarks
@@ -25,6 +30,7 @@ header {
     /* box-shadow: 2px 3px 4px 0px rgba(0,0,0,0.75); */
     box-shadow: rgba(0, 0, 0, 0.156863) 0px 2px 5px 0px, rgba(0, 0, 0, 0.117647) 0px 2px 10px 0px;
     margin: 20px;
+    background-color: white;
 }
 
 .remove {
