--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -192,8 +192,8 @@ html {
   input[type="reset"].button-primary,
   input[type="button"].button-primary {
     color: #FFF;
-    background-color: #33C3F0;
-    border-color: #33C3F0; }
+    background-color: #283593;
+    border-color: #283593; }
   .button.button-primary:hover,
   button.button-primary:hover,
   input[type="submit"].button-primary:hover,
@@ -205,8 +205,8 @@ html {
   input[type="reset"].button-primary:focus,
   input[type="button"].button-primary:focus {
     color: #FFF;
-    background-color: #1EAEDB;
-    border-color: #1EAEDB; }
+    background-color: #1A237E;
+    border-color: #1A237E; }
   .button.remove,
   button.remove:hover {
     color: #FFF;
