--- a/styles/index.css
+++ b/styles/index.css
@@ -2,6 +2,8 @@
 ----------------------------------------------------------------
 - Header
 - Bookmarks
+- Collapsible
+- Error Handling
 
 */
 
@@ -40,6 +42,31 @@ header {
 
 .stars-inner {
     color: #f8ce0b;
+}
+
+.button.remove,
+button.remove:hover {
+  color: #FFF;
+  background-color: #f44336;
+  border-color: #f44336;
+}
+
+button.remove {
+  color: #f44336;
+  background-color: #FFF;
+  border: none;
+}
+
+button.edit:hover {
+  color: #FFF;
+  background-color: #1A237E;
+  border-color: #1A237E;
+}
+
+button.edit {
+  color: #283593;
+  background-color: #FFF;
+  border: none;
 }
 
 /* Collapsible
@@ -93,4 +120,14 @@ header {
 
 .toggle:checked + .lbl-toggle::before {
     transform: rotate(90deg) translateX(-3px);
+}
+
+/* Error Handling
+----------------------------------------------------------------*/
+
+.error-container {
+    display: inline;
+    color: red;
+    background-color: #FEEAED;
+    text-emphasis: filled double-circle blue;
 }
