Adjusted cancel button on Add Bookmark

--- a/styles/index.css
+++ b/styles/index.css
@@ -51,7 +51,8 @@ button.remove:hover {
   border-color: #f44336;
 }
 
-button.remove {
+button.remove,
+button.js-cancel-add {
   color: #f44336;
   background-color: #FFF;
   border: none;
